k8s/dev/playground-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: playground
  namespace: dev
spec:
  containers:
  - name: playground
    image: wil42/playground:latest
    ports:
    - containerPort: 80
