k8s/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: playground
  namespace: dev
spec:
  selector:
    app: playground
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
