k8s/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: playground-ingress
  namespace: dev
spec:
  rules:
  - host:kubectl port-forward --address 0.0.0.0 svc/argocd-server -n argocd 8080:443
 localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: playground
            port:
              number: 8888
